ADD: lab03 tasks 04-05

--- a/sem05/lab03/tex/05-main.tex
+++ b/sem05/lab03/tex/05-main.tex
@@ -66,7 +66,7 @@
 На рисунке \ref{img:exp1} представлен график, полученный в результате
 эксперимента.
 
-\img{50mm}{exp1.jpg}{Результат эксперимента (байты -- такты)}{exp1}
+\img{40mm}{exp1.jpg}{Результат эксперимента 1 (байты -- такты)}{exp1}
 
 Получим значения следующих величин:
 \begin{equation}
@@ -103,59 +103,77 @@
 оперативная память неоднородна, поэтому для обращение к последовательно
 расположенным данным может потребоваться разное количество времени.
 
-\section{Сравнение эффективности ссылочных и векторных структур}
+\section{Задание 4}
 
-\textbf{Цель эксперимента} -- оценка   влияния   зависимости   команд   по   данным   на эффективность вычислений.
+\textbf{Название эксперимента} -- сравнение эффективности ссылочных и векторных
+структур.
+
+\textbf{Цель эксперимента} -- оценка влияния зависимости команд по данным на
+эффективность вычислений.
 
 \subsection{Результаты эксперимента}
-Отношение времени работы алгоритма, использующего зависимые данные, ко времени обработки аналогичного алгоритма обработки независимых данных.
+Отношение времени работы алгоритма, использующего зависимые данные, ко времени
+обработки аналогичного алгоритма обработки независимых данных.
 
 \subsection{Описание проблемы}
-Обработка зависимых данных происходит в тех случаях, когда результат работы одной команды используется в качестве адреса операнда другой. При программировании на языках высокого уровня такими операндами являются указатели, активно используемые при обработке ссылочных структур данных: списков, деревьев,графов. Обработка данных структур процессорами с длинными конвейерами команд приводит к заметному увеличению  времени работы алгоритмов: адрес загружаемого операнда   становится   известным   только   после   обработки   предыдущей   команды.   В противоположность этому, обработка векторных структур, таких как массивы, позволяет эффективно использовать аппаратные возможности ЭВМ.
+Обработка зависимых данных происходит в тех случаях, когда результат работы
+одной команды используется в качестве адреса операнда другой. При
+программировании на языках высокого уровня такими операндами являются
+указатели, активно используемые при обработке ссылочных структур данных:
+списков, деревьев, графов. Обработка данных структур процессорами с длинными
+конвейерами команд приводит к заметному увеличению  времени работы алгоритмов:
+адрес загружаемого операнда становится известным только после обработки
+предыдущей команды. В противоположность этому, обработка векторных структур,
+таких как массивы, позволяет эффективно использовать аппаратные возможности
+ЭВМ.
 
 \subsection{Суть эксперимента}  
-Для сравнения эффективности векторных и списковых структур в эксперименте применяется профилировка кода двух алгоритмов поиска минимального значения. Первый алгоритм использует для хранения данных список, в то время как во втором применяется массив. Очевидно, что время работы алгоритма поиска минимального значения в списке зависит от его фрагментации, т.е. от среднего расстояния междуэлементами   списка. 
-
+Для сравнения эффективности векторных и списковых структур в эксперименте
+применяется профилировка кода двух алгоритмов поиска минимального значения.
+Первый алгоритм использует для хранения данных список, в то время как во втором
+применяется массив. Очевидно, что время работы алгоритма поиска минимального
+значения в списке зависит от его фрагментации, т.е. от среднего расстояния
+междуэлементами   списка. 
 
 \subsection{Проведение эксперимента}
 
-Изменяемые параметры.
-
+Изменяемые параметры:
 \begin{enumerate}
-	\item Количество элементов в списке = 4.
+	\item Количество элементов в списке = 1.
 	\item Максимальная фрагментации списка = 256.
 	\item Шаг увеличения фрагментации = 4.
 \end{enumerate}
 
 На графике, который представлен на рисунке \ref{img:exp2}:
 \begin{itemize}
-	\item \textbf{красная линия} -- количество тактов работы алгоритма с использованием списка;
-	\item \textbf{зеленая линия} -- количество тактов работы алгоритма с использованием массива.
+    \item \textbf{красная линия} -- количество тактов работы алгоритма с
+          использованием списка;
+    \item \textbf{зеленая линия} -- количество тактов работы алгоритма с
+          использованием массива.
 \end{itemize}
 
 При этом на оси абсцисс указана фрагментация списка.
 
-%\imgScale{0.3}{exp2}{Результат выполнения эксперимента в PCLAB}
-%
-%\imgScale{0.3}{exp2_time}{Результат сравнения времени работы}
+\img{40mm}{exp2}{График эксперимента 2 (килобайты -- такты)}{exp2}
 
-\clearpage
+\img{20mm}{exp2res}{Результат эксперимента 2}{exp2res}
 
-
-Также на рисунке \ref{img:exp2_time} представлен результат сравнения, на котором видно, что список обрабатывается в 23,071307 раз дольше массива.
-
-
+На рисунке \ref{img:exp2res} представлен результат сравнения, на
+котором видно, что список обрабатывается в 21,11339 раз дольше массива.
 
 \subsection{Вывод}
 
-Необходимо учитывать технологический фактор решаемой задачи, от которой и зависит то, какая структура данных подхдоит больше. В данном случае приорететным является использование массива. 
+Необходимо учитывать технологический фактор решаемой задачи, от которой и
+зависит то, какая структура данных подходит больше. В данном случае
+приорететным является использование массива. 
 
+\section{Задание 5}
 
+\textbf{Название эксперимента} -- исследование эффективности программной
+предвыборки.
 
-
-\section{Исследование эффективности программной предвыборки}
-
-\textbf{Цель эксперимента} -- оценка   влияния   зависимости   команд   по   данным   на эффективность вычислений.
+\textbf{Цель эксперимента} -- оценка влияния зависимости команд по данным на
+эффективность вычислений.
 
 \subsection{Исходные данные}
 \begin{enumerate}
@@ -164,45 +182,61 @@
 \end{enumerate}
 
 \subsection{Результаты эксперимента}
-Отношение времени последовательной обработки блока данных ко времени обработки блока с применением предвыборки; время и количествотактов первого обращения к странице  данных.
+Отношение времени последовательной обработки блока данных ко времени обработки
+блока с применением предвыборки; время и количество тактов первого обращения к
+странице данных.
 
 
 \subsection{Описание проблемы}
-Обработка больших массивов информации сопряжена с открытием большого количества физических страниц памяти.  При первом обращении к странице памяти наблюдается   увеличенное время доступа к данным. Это связано с необходимостью преобразования логического адреса в физический адрес памяти, а также c открытием   страницы   динамической   памяти   и   сохранения   данных   в   кэш-памяти. Преобразование выполняется на основе информации о использованных ранее страницах, содержащейся в TLB буфере процессора. Первое обращение к странице при отсутствии информации   в  TLB  вызывает двойное обращение к оперативной памяти: сначала за информацией из таблицы страниц, а далее за востребованными данными.   Предвыборка заключается   в   заблаговременном   проведении   всех   указанных   действий   благодаря дополнительному запросу небольшого количества данных из оперативной памяти.
+Обработка больших массивов информации сопряжена с открытием большого количества
+физических страниц памяти. При первом обращении к странице памяти наблюдается
+увеличенное время доступа к данным. Это связано с необходимостью преобразования
+логического адреса в физический адрес памяти, а также c открытием страницы
+динамической памяти и сохранения данных в кэш-памяти.
+
+Преобразование выполняется на основе информации о использованных ранее
+страницах, содержащейся в TLB буфере процессора. Первое обращение к странице
+при отсутствии информации в TLB вызывает двойное обращение к оперативной
+памяти: сначала за информацией из таблицы страниц, а далее за востребованными
+данными. Предвыборка заключается в заблаговременном проведении всех
+указанных действий благодаря дополнительному запросу небольшого количества
+данных из оперативной памяти.
 
 \subsection{Суть эксперимента}  
-Эксперимент основан на замере времени двух вариантов подпрограмм последовательного чтения страниц оперативной памяти. В первом варианте выполняется последовательное чтение без дополнительной оптимизации, что приводит к дополнительным двойным обращениям. Во втором варианте перед циклом чтения страниц используется   дополнительный   цикл   предвыборки,   обеспечивающий   своевременную загрузку информации в TLB данных. 
-
+Эксперимент основан на замере времени двух вариантов подпрограмм
+последовательного чтения страниц оперативной памяти. В первом варианте
+выполняется последовательное чтение без дополнительной оптимизации, что
+приводит к дополнительным двойным обращениям. Во втором варианте перед циклом
+чтения страниц используется дополнительный цикл предвыборки, обеспечивающий
+своевременную загрузку информации в TLB данных. 
 
 \subsection{Проведение эксперимента}
 
-Изменяемые параметры.
-
+Изменяемые параметры:
 \begin{enumerate}
-	\item Шаг увеличения расстояния между читаемыми данными = 256.
-	\item Размер массива = 256.
+	\item Шаг увеличения расстояния между читаемыми данными = 64.
+	\item Размер массива = 128.
 \end{enumerate}
 
 На графике, который представлен на рисунке \ref{img:exp3}:
 \begin{itemize}
-	\item \textbf{красная линия} -- количество тактов работы алгоритма без использования предвыборки;
-	\item \textbf{зеленая линия} -- количество тактов работы алгоритма с использованием предвыборки.
+    \item \textbf{красная линия} -- количество тактов работы алгоритма без
+          использования предвыборки;
+    \item \textbf{зеленая линия} -- количество тактов работы алгоритма с
+          использованием предвыборки.
 \end{itemize}
 
+\img{40mm}{exp3}{График эксперимента 3 (байты -- такты)}{exp3}
 
-%\imgScale{0.3}{exp3}{Результат выполнения эксперимента в PCLAB}
-%
-%\imgScale{0.3}{exp3_time}{Результат сравнения времени работы}
+\img{20mm}{exp3res}{Результат эксперимента 3}{exp3res}
 
-\clearpage
-
-Также на рисунке \ref{img:exp3_time} представлен результат сравнения, на котором видно, что обработка без загрузки страниц в TLB в 1.5124754 раза дольше.
-
-
+На рисунке \ref{img:exp3res} представлен результат сравнения, на котором видно,
+что обработка без загрузки страниц в TLB в 1,1642163 раза дольше.
 
 \subsection{Вывод}
 
-При использовании заблаговременной загрузки страниц можно получить ускорение работы программы.
+При использовании заблаговременной загрузки страниц можно получить ускорение
+работы программы.
 
 
 
