ADD: lab03 tasks 06-08

--- a/sem05/lab03/tex/05-main.tex
+++ b/sem05/lab03/tex/05-main.tex
@@ -238,12 +238,13 @@
 При использовании заблаговременной загрузки страниц можно получить ускорение
 работы программы.
 
+\section{Задание 6}
+\textbf{Название эксперимента} -- исследование способов эффективного чтения
+оперативной памяти.
 
-
-
-\section{Исследование способов эффективного  чтения оперативной памяти}
-
-\textbf{Цель эксперимента} -- исследование возможности ускорения вычислений благодаряиспользованию структур данных, оптимизирующих механизм чтения оперативной памяти.
+\textbf{Цель эксперимента} -- исследование возможности ускорения вычислений
+благодаря использованию структур данных, оптимизирующих механизм чтения
+оперативной памяти.
 
 \subsection{Исходные данные}
 \begin{enumerate}
@@ -252,20 +253,43 @@
 \end{enumerate}
 
 \subsection{Результаты эксперимента}
-Отношение   времени   обработки   блока   памяти неоптимизированной структуры ко времени обработки блока структуры, обеспечивающей эффективную загрузку и параллельную обработку данных
+Отношение времени обработки блока памяти неоптимизированной структуры ко
+времени обработки блока структуры, обеспечивающей эффективную загрузку и
+параллельную обработку данных.
 
 
 \subsection{Описание проблемы}
-При   обработке информации, находящейся в нескольких страницах и банках оперативной памяти возникают задержки, связанные с необходимостью открытия и закрытия страниц DRAM памяти. При программировании на языках высокого уровня такая ситуация наблюдается при интенсивной обработке нескольких массивов данных   или   обработке   многомерных   массивов.   При   этом   процессоры,   в   которых реализованы   механизмы   аппаратной   предвыборки,   часто   не   могут   организовать эффективную загрузку данных. Кроме этого, объемы запрошенных данных оказываются заметно меньше размера пакета, передаваемого из оперативной памяти. Таким образом,эффективная обработка нескольких векторных структур данных без их дополнительной оптимизации не использует в должной степени возможности аппаратных ресурсов. Для создания структур данных, оптимизирующих их обработку   современными процессорами, требуется максимально исключить несвоевременную передачу данных, т.е.передавать в каждом пакете только востребованную для вычислений информацию. В результате   такой   оптимизации   снижается   количество   кэш-промахов,   сокращается количество открытий и закрытий страниц  DRAM-памяти, обеспечивается параллельная обработка данных и выполнение операций загрузки и выгрузки.
+При обработке информации, находящейся в нескольких страницах и банках
+оперативной памяти возникают задержки, связанные с необходимостью открытия и
+закрытия страниц DRAM памяти. При программировании на языках высокого уровня
+такая ситуация наблюдается при интенсивной обработке нескольких массивов данных
+или обработке многомерных массивов. При этом процессоры, в которых реализованы
+механизмы аппаратной предвыборки, часто не могут организовать эффективную
+загрузку данных. Кроме этого, объемы запрошенных данных оказываются заметно
+меньше размера пакета, передаваемого из оперативной памяти. Таким
+образом,эффективная обработка нескольких векторных структур данных без их
+дополнительной оптимизации не использует в должной степени возможности
+аппаратных ресурсов. Для создания структур данных, оптимизирующих их обработку
+современными процессорами, требуется максимально исключить несвоевременную
+передачу данных, т.е. передавать в каждом пакете только востребованную для
+вычислений информацию. В результате такой оптимизации снижается количество
+кэш-промахов, сокращается количество открытий и закрытий страниц  DRAM-памяти,
+обеспечивается параллельная обработка данных и выполнение операций загрузки и
+выгрузки.
 
 \subsection{Суть эксперимента}  
-Для сравнения производительности алгоритмов, использующих оптимизированные и неоптимизированные структуры данных используется профилировка кода двух подпрограмм, каждая из которых должна выполнить обработку нескольких блоков оперативной памяти. В алгоритмах обрабатываются двойные слова данных (4 байта), что существенно меньше размера пакета (32 – 128 байт). Неоптимизированный вариант структуры данных представляет собой несколько массивов в оперативной памяти, в то время как оптимизированная структура состоит из чередующихся данных каждого массива. 
-
+Для сравнения производительности алгоритмов, использующих оптимизированные и
+неоптимизированные структуры данных используется профилировка кода двух
+подпрограмм, каждая из которых должна выполнить обработку нескольких блоков
+оперативной памяти. В алгоритмах обрабатываются двойные слова данных (4 байта),
+что существенно меньше размера пакета (32 – 128 байт). Неоптимизированный
+вариант структуры данных представляет собой несколько массивов в оперативной
+памяти, в то время как оптимизированная структура состоит из чередующихся
+данных каждого массива. 
 
 \subsection{Проведение эксперимента}
 
-Изменяемые параметры.
-
+Изменяемые параметры:
 \begin{enumerate}
 	\item Размер массива = 2.
 	\item Количество потоков данных = 64.
@@ -273,32 +297,29 @@
 
 На графике, который представлен на рисунке \ref{img:exp4}:
 \begin{itemize}
-	\item \textbf{красная линия} -- количество тактов работы алгоритма, который использует неоптимизированную структуру;
-	\item \textbf{зеленая линия} -- количество тактов работы алгоритма с использованием оптимизированной структуры.
+    \item \textbf{красная линия} -- количество тактов работы алгоритма, который
+        использует неоптимизированную структуру;
+    \item \textbf{зеленая линия} -- количество тактов работы алгоритма с
+        использованием оптимизированной структуры.
 \end{itemize}
 
+\img{40mm}{exp4}{График эксперимента 4 (количество параллельных потоков --
+                 такты)}{exp4}
 
-%\imgScale{0.3}{exp4}{Результат выполнения эксперимента в PCLAB}
-%
-%\imgScale{0.3}{exp4_time}{Результат сравнения времени работы}
+\img{20mm}{exp4res}{Результат эксперимента 4}{exp4res}
 
-
-\clearpage
-
-
-Также на рисунке \ref{img:exp4_time} представлен результат сравнения, на котором видно, что неоптимизированная структура обрабатывается в 1.6762066 раза дольше.
-
+На рисунке \ref{img:exp4res} представлен результат сравнения, на котором видно,
+что неоптимизированная структура обрабатывается в 1.6532999 раза дольше.
 
 \subsection{Вывод}
-
 Чем лучше упорядочены данные, тем быстрее работает алгоритм.
 
+\section{Задание 7}
 
+\textbf{Название эксперимента} -- исследование конфликтов в кэш-памяти.
 
-
-\section{Исследование конфликтов в кэш-памяти}
-
-\textbf{Цель эксперимента} -- исследование   влияния   конфликтов   кэш-памяти   наэффективность вычислений.
+\textbf{Цель эксперимента} -- исследование влияния конфликтов кэш-памяти
+наэффективность вычислений.
 
 \subsection{Исходные данные}
 \begin{enumerate}
@@ -308,54 +329,69 @@
 \end{enumerate}
 
 \subsection{Результаты эксперимента}
-Отношение времени обработки массива с конфликтами вкэш-памяти ко времени обработки массива без конфликтов.
-
+Отношение времени обработки массива с конфликтами вкэш-памяти ко времени
+обработки массива без конфликтов.
 
 \subsection{Описание проблемы}
-Наборно-ассоциативная кэш-память состоит из линеек данных, организованных в несколько независимых банков. Выбор банка для каждой порции кэшируемых данных выполняется по ассоциативному принципу, т.е. из условия улучшения представительности выборки, в то время как целевая линейка в каждом из банков жестко определяется по младшей части физического адреса. Совокупность таких линеек всех банков принято называть набором. Таким образом, попытка читать данные из оперативной памяти с шагом, кратным размеру банка, приводит к их помещению в один и тот же набор.Если же количество запросов превосходит степень ассоциативности кэш-памяти, т.е.количество банков или количество линеек в наборе, то наблюдается постоянное вытеснение данных из кэш-памяти, причем больший ее объем  остается незадействованным.
+Наборно-ассоциативная кэш-память состоит из линеек данных, организованных в
+несколько независимых банков. Выбор банка для каждой порции кэшируемых данных
+выполняется по ассоциативному принципу, т.е. из условия улучшения
+представительности выборки, в то время как целевая линейка в каждом из банков
+жестко определяется по младшей части физического адреса. Совокупность таких
+линеек всех банков принято называть набором. Таким образом, попытка читать
+данные из оперативной памяти с шагом, кратным размеру банка, приводит к их
+помещению в один и тот же набор. Если же количество запросов превосходит степень
+ассоциативности кэш-памяти, т.е. количество банков или количество линеек в
+наборе, то наблюдается постоянное вытеснение данных из кэш-памяти, причем
+больший ее объем  остается незадействованным.
 
 \subsection{Суть эксперимента}  
-Для определения степени влияния конфликтов в кэш-памяти на эффективность вычислений используется профилировка двух процедур чтения и обработки данных. Первая процедура построена таким образом, что чтение данных выполняется с шагом, кратным размеру банка. Это порождает постоянные конфликты в кэш-памяти.Вторая процедура оптимизирует размещение данных в кэш с помощью задания смещения востребованных данных на некоторый шаг, достаточный для выбора другого набора. Этотшаг соответствует размеру линейки.  
-
+Для определения степени влияния конфликтов в кэш-памяти на эффективность
+вычислений используется профилировка двух процедур чтения и обработки данных.
+Первая процедура построена таким образом, что чтение данных выполняется с
+шагом, кратным размеру банка. Это порождает постоянные конфликты в
+кэш-памяти. Вторая процедура оптимизирует размещение данных в кэш с помощью
+задания смещения востребованных данных на некоторый шаг, достаточный для выбора
+другого набора. Этот шаг соответствует размеру линейки.  
 
 \subsection{Проведение эксперимента}
 
-Изменяемые параметры.
-
+Изменяемые параметры:
 \begin{enumerate}
 	\item Размер банка кэш-памяти = 256.
-	\item Размер линейки кэш-памяти = 32.
+	\item Размер линейки кэш-памяти = 8.
 	\item Количество читаемых линеек = 64.
 \end{enumerate}
 
 На графике, который представлен на рисунке \ref{img:exp5}:
 \begin{itemize}
-	\item \textbf{красная линия} -- количество тактов работы функции, которая читает данные с конфилктами в кэш-памяти;
-	\item \textbf{зеленая линия} -- количество тактов работы функции, которая не вызывает конфликтов в кэш-памяти.
+    \item \textbf{красная линия} -- количество тактов работы функции, которая
+        читает данные с конфилктами в кэш-памяти;
+    \item \textbf{зеленая линия} -- количество тактов работы функции, которая
+        не вызывает конфликтов в кэш-памяти.
 \end{itemize}
 
-При этом на оси абсцисс отражено смещение читаемой ячейки от начала блока данных.
+При этом на оси абсцисс отражено смещение читаемой ячейки от начала блока
+данных.
 
+\img{40mm}{exp5}{График эксперимента 5 (смещение от начала блока --
+такты)}{exp5}
 
-%\imgScale{0.2}{exp5}{Результат выполнения эксперимента в PCLAB}
+\img{20mm}{exp5res}{Результат эксперимента 5}{exp5res}
 
-\clearpage
-
-
-В результате работы сравнения было определено, что с конфликтами данных производится в 6.2300479 раза дольше.
-
-
+В результате работы сравнения было определено, что с конфликтами данных
+производится в 6.7020765 раза дольше.
 
 \subsection{Вывод}
 
 Использование кэш-памяти позволяет значительно ускорить работу процессора.
 
+\section{Задание 8}
 
-
-
-\section{Сравнение алгоритмов сортировки}
-
-\textbf{Цель эксперимента} -- сследование способов эффективного использования  памяти ивыявление наиболее эффективных алгоритмов сортировки, применимых в вычислительных системах.
+\textbf{Название эксперимента} -- сравнение алгоритмов сортировки.
+\textbf{Цель эксперимента} -- сследование способов эффективного использования
+памяти ивыявление наиболее эффективных алгоритмов сортировки, применимых в
+вычислительных системах.
 
 \subsection{Исходные данные}
 \begin{enumerate}
@@ -366,46 +402,59 @@
 \end{enumerate}
 
 \subsection{Результаты эксперимента}
-Отношение времени сортировки массива алгоритмом QuickSort ко времени сортировки алгоритмом Radix-Counting Sort  и ко времени сортировки Radix-Counting Sort, оптимизированной под 8-процессорную вычислительную систему.
-
+Отношение времени сортировки массива алгоритмом \textit{QuickSort} ко времени
+сортировки алгоритмом \textit{Radix-Counting Sort} и ко времени сортировки
+\textit{Radix-Counting Sort}, оптимизированной под 8-процессорную
+вычислительную систему.
 
 \subsection{Описание проблемы}
-Существует несколько десятков алгоритмов сортировки. Их можно классифицировать по таким критериям, как: назначение (внутренняя и внешняя сортировки), вычислительная сложность (алгоритмы с вычислительными сложностями O(n2), O(n*log(n)), O(n), O(n/log(n))), емкостная сложность (алгоритмы, требующие и нетребующие   дополнительного   массива),   возможность   распараллеливания   (нераспараллеливаемые, ограниченно распараллеливаемые, полностью распараллеливаемые), принцип   определения   порядка   (алгоритмы,   использующие   парные   сравнения   и   неиспользующие парные сравнения).
+Существует несколько десятков алгоритмов сортировки. Их можно классифицировать
+по таким критериям, как: назначение (внутренняя и внешняя сортировки),
+вычислительная сложность (алгоритмы с вычислительными сложностями $O(n^2)$,
+$O(n \log n)$, $O(n)$, $O(\frac{n}{\log n})$), емкостная сложность (алгоритмы,
+требующие и нетребующие дополнительного массива), возможность распараллеливания
+(нераспараллеливаемые, ограниченно распараллеливаемые, полностью
+распараллеливаемые), принцип определения порядка (алгоритмы, использующие
+парные сравнения и неиспользующие парные сравнения).
 
 \subsection{Суть эксперимента}  
-Эксперимент основан на замере времени трех вариантов алгоритмов сортировки (Quick Sort, Radix-Counting Sort, Оптимизированный Radix-CountingSort) .
-
+Эксперимент основан на замере времени трех вариантов алгоритмов сортировки
+(\textit{Quick Sort}, \textit{Radix-Counting Sort}, оптимизированный
+\textit{Radix-Counting Sort}).
 
 \subsection{Проведение эксперимента}
 
-Изменяемые параметры.
-
+Изменяемые параметры:
 \begin{enumerate}
-	\item Количество 64-х разрядных элементов массивов = 2.
-	\item Шаг увеличения размера массива = 128.
+	\item Количество 64-х разрядных элементов массивов = 20.
+	\item Шаг увеличения размера массива = 1024.
 \end{enumerate}
 
 На графике, который представлен на рисунке \ref{img:exp6}:
 \begin{itemize}
-	\item \textbf{фиолетовая линия} -- количество тактов работы алгоритма QuickSort;
-	\item \textbf{красная линия} -- количество тактов работы алгоритма неоптимизированного алгоритма Radix-Counting;
-	\item \textbf{зеленая линия} -- количество тактов работы оптимизированного под 8-процессорную вычислительную систему алгоритма Radix-Counting.
+    \item \textbf{фиолетовая линия} -- количество тактов работы алгоритма
+        QuickSort;
+    \item \textbf{красная линия} -- количество тактов работы алгоритма
+        неоптимизированного алгоритма Radix-Counting;
+    \item \textbf{зеленая линия} -- количество тактов работы оптимизированного
+        под 8-процессорную вычислительную систему алгоритма Radix-Counting.
 \end{itemize}
 
-При этом на оси абсцисс отражено количество 64-разрядных элементов сортируемых массивов, а на оси ординат -- количество тактов.
+При этом на оси абсцисс отражено количество 64-разрядных элементов сортируемых
+массивов, а на оси ординат -- количество тактов.
+
+\img{40mm}{exp6}{График эксперимента 6 (число элементов -- такты)}{exp6}
+
+\img{20mm}{exp6res}{Результат эксперимента 6}{exp6res}
 
 
-%\imgScale{0.2}{exp6}{Результат выполнения эксперимента в PCLAB}
-%
-%\imgScale{0.6}{exp6_time}{Результат сравнения времени работы}
-
-Также на рисунке \ref{img:exp6_time} представлен результат сравнения, на котором видно, что QuickSort работал в 1.95434 раза дольше, чем Radix-Counting Sort, и в 2.353913 раза дольше, чем Radix-Counting Sort, оптимизированного под 8-процессорную ЭВМ.
-
-
-\clearpage
-
-
+Также на рисунке \ref{img:exp6res} представлен результат сравнения, на котором
+видно, что \textit{QuickSort} работал в 2,0717642 раза дольше, чем
+\textit{Radix-Counting Sort}, и в 2,3783462 раза дольше, чем
+\textit{Radix-Counting Sort}, оптимизированного под 8-процессорную ЭВМ.
 
 \subsection{Вывод}
 
-Radix-Counting Sort является более быстрой сортировкой, чем QuickSort, при этом даже Radix-Counting Sort можно улучшить, оптимизировав его под 8-процессорную ЭВМ.
+Radix-Counting Sort является более быстрой сортировкой, чем QuickSort, при этом
+даже Radix-Counting Sort можно улучшить, оптимизировав его под 8-процессорную
+ЭВМ.
