ADD: full lab03

--- a/sem05/lab03/tex/07-conclusion.tex
+++ b/sem05/lab03/tex/07-conclusion.tex
@@ -1,17 +1,19 @@
 \chapter*{Заключение}
 \addcontentsline{toc}{chapter}{Заключение}
 
-В ходе лабораторной работы были изучены 
+В ходе лабораторной работы были изучены принципы эффективного использования
+подсистемы памяти современных универсальных ЭВМ, обеспечивающей хранение и
+своевременную выдачу команд и данных в центральное процессорное устройство.
 
 Были выполнены следующие задачи:
 \begin{itemize}
-    \item
-    \item
-    \item
-    \item
-    \item
-    \item
-    \item
+    \item был изучен теоретический материал, касающийся особенностей
+          функционирования подсистемы памяти современных конвейерных
+          суперскалярных ЭВМ;
+    \item были изучены возможности программы PCLAB и средства идентификации
+          микропроцессоров;
+    \item были проведены исследования времени выполнения тестовых программ и
+          сделаны выводы о архитектурных особенностях используемых ЭВМ.
 \end{itemize}
 
 Таким образом, все поставленные задачи были выполнены, а цель достигнута.
