--- a/sem05/lab03/tex/06-questions.tex
+++ b/sem05/lab03/tex/06-questions.tex
@@ -4,84 +4,70 @@
 
 \noindent
 \begin{itemize}[left=-0.5\parindent]
-    \item \textbf{Назовите преимущества и недостатки аппаратных ускорителей на
-          ПЛИС по сравнению с CPU и графическими ускорителями}
+    \item \textbf{Назовите причины расслоения оперативной памяти}
 
-        Преимущества:
-        \begin{itemize}
-            \item создание специализированной вычислительной структуры для
-                  реализации желаемой функциональности;
-            \item низкая стоимость в сравнению с обычными аппаратными
-                  ускорителями;
-            \item большая частота эмуляции;
-            \item компактность.
-        \end{itemize}
-
-        Недостатки:
-        \begin{itemize}
-            \item необходимость перекомпиляции проекта и переконфигурации ПЛИС
-                  при любом исправлении содержимого проекта;
-            \item наличие специализированного программного обеспечения для
-                  разделения модели микросхемы на части для загрузки в
-                  отдельные ПЛИС.
-        \end{itemize}
+        При расслоении банки памяти обычно упорядочиваются так, чтобы N
+        последовательных адресов памяти $i$, $i+1$, $i+2$, ..., $i + N-1$
+        приходились на N различных банков. Можно достичь в N раз большей
+        скорости доступа к памяти в целом, чем у отдельного ее банка, если
+        обеспечить при каждом доступе обращение к данным в каждом из банков.
+        Имеются разные способы реализации таких расслоенных структур.
+        Большинство из них напоминают конвейеры, обеспечивающие рассылку
+        адресов в различные банки и мультиплексирующие поступающие из банков
+        данные. Таким образом, степень или коэффициент расслоения определяют
+        распределение адресов по банкам памяти. Такие системы оптимизируют
+        обращения по последовательным адресам памяти, что является характерным
+        при подкачке информации в кэш-память при чтении, а также при записи, в
+        случае использования кэш-памятью механизмов обратного копирования.
+        Однако, если требуется доступ к непоследовательно расположенным словам
+        памяти, производительность расслоенной памяти может значительно
+        снижаться.
         ~\\
 
-    \item \textbf{Назовите основные способы оптимизации циклических конструкций
-          ЯВУ, реализуемых в виде аппаратных ускорителей}
-        \begin{itemize}[leftmargin=\parindent]
-            \item конвейерная обработка;
-            \item разворачивание циклов;
-            \item потоковая обарботка.
-        \end{itemize}
+    \item \textbf{Как в современных процессорах реализована аппаратная
+                 предвыборка?}
+
+        Аппаратная предвыборка происходит неявно, без участия человека или
+        компилятора. Кэш-контроллер анализирует, по каким адресам и в каком
+        порядке программа обращается к оперативной памяти, пытается
+        предугадать, какие данные вскоре могут понадобиться программе, и
+        осуществляет их автоматическую предвыборку в кэш-память.
+
+        Если кэш-контроллер обнаруживает, что оперативная память
+        последовательно опрашивается с некоторым фиксированным шагом, то он
+        делает предположение, что в программе имеет место некоторая
+        последовательная обработка массива, и начинает загружать следующие
+        блоки данных заранее, еще до того, как к ним реально произойдет
+        обращение.
+
+        Если кэш-контроллер распознал в последовательности обращений обход
+        массива ошибочно, то данные, которые он загрузит в кэш-память, могут
+        не понадобиться. Более того, они могут «вытеснить» какие-либо полезные
+        данные, находившиеся в кэш-памяти, и их придется загружать, когда
+        программа к ним обратится снова. Тем не менее в большинстве случаев
+        аппаратная предвыборка данных в кэш-память сказывается на скорости
+        работы программ положительно.
         ~\\
 
-    \item \textbf{Назовите этапы работы программной части ускорителя в хост
-          системе}
-        \begin{enumerate}[leftmargin=\parindent]
-            \item[Этап 1.] Инициализация среды OpenCL.
-            \item[Этап 2.] Создание трех буферов, необходимых для
-            обмена данными с ядром: два буфера для передачи исходных данных и
-            один для вывода результата.
-            \item[Этап 3.] Запуск задачи на исполнение.
-            \item[Этап 4.] Чтение выходного буфера, содержащего результаты
-            работы ядра, после завершения работы всех команд.
-        \end{enumerate}
+    \item \textbf{Какая информация хранится в TLB?}
+
+        TLB хранит последние переводы виртуальной памяти в физическую память и
+        может называться кэшем преобразования адресов.
         ~\\
 
-    \item \textbf{В чем заключается процесс отладки для вариантов сборки
-          Emulation-SW, Emulation-HW и Hardware?}
-        \begin{itemize}[leftmargin=\parindent]
-            \item \textit{Программная эмуляция} (Emulation-SW) --- код ядра
-                  компилируется для работы на ЦПУ хост-системы. Этот вариант
-                  сборки служит для верификации совместного исполнения кода
-                  хост-системы и кода ядра, для выявления синтаксических
-                  ошибок, выполнения отладки на уровне исходного кода ядра,
-                  проверки поведения системы.
+    \item \textbf{Какой тип ассоциативной памяти используется в кэш-памяти
+                  второго уровня современных ЭВМ и почему?}
 
-            \item \textit{Аппаратная эмуляция} (Emulation-HW) --- код ядра
-                  компилируется в аппаратную модель (RTL), которая запускается
-                  в специальном симуляторе на ЦПУ. Этот вариант сборки и
-                  запуска занимает больше времени, но обеспечивает подробное и
-                  точное представление активности ядра. Данный вариант сборки
-                  полезен для тестирования функциональности ускорителя и
-                  получения начальных оценок производительности.
+        Используется множественно-ассоциативный тип в кэш-памяти второго
+        уровня в современных ЭВМ, так как она устраняет проблему
+        многочисленного вытеснения информации, возникающую в памяти с прямым
+        отображением, и проблему поиска нужной строки, возникающую в полностью
+        ассоциативной памяти.
+        ~\\
 
-            \item \textit{Аппаратное обеспечение} (Hardware) - код ядра
-                  компилируется в аппаратную модель (RTL), а затем реализуется
-                  на FPGA. В результате формируется двоичный файл xclbin,
-                  который будет работать на реальной FPGA.
-            \end{itemize}
-            ~\\
+    \item \textbf{Приведите пример программной предвыборки}
 
-    \item \textbf{Какие инструменты и средства анализа результатов синтеза
-          возможно использовать в Vitis HLS для оптимизации ускорителей?}
-        \begin{itemize}[leftmargin=\parindent]
-            \item компилятор Xilinx Vitis v++;
-            \item Assistant View (получение отчетов о сборке аппартных ядер);
-            \item внутрисхемный отладчик Vivado (отслеживание любых сигналов
-                  ускорителя для анализа событий);
-            \item сводный отчет Link Summary (Vitis Analyzer, получение
-                  диаграмм системы и платформы и др.)
-        \end{itemize}
+        В некотором итерационном вычислительном процессе разумно делать
+        предвыборку в кэш-память тех данных, которые понадобятся на следующих
+        итерациях.
 \end{itemize}
